News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/BookingLineItemRevenueDist__c.object-meta.xml
<CustomObject>
    <label>Booking Line Item Revenue Dist</label>
    <nameField>
        <label>Booking Line Item Revenue Dist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Line Item Revenue Dists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>