News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/BookingLineItem__c.field-meta.xml
<CustomField>
    <fullName>BookingLineItem__c</fullName>
    <label>Booking Line Item</label>
    <referenceTo>Booking_Line_Item__c</referenceTo>
    <relationshipLabel>Booking Line Item Revenue Dists</relationshipLabel>
    <relationshipName>Booking_Line_Item_Revenue_Dists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>