News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/BookingLineItemTotalDays__c.field-meta.xml
<CustomField>
    <fullName>BookingLineItemTotalDays__c</fullName>
    <formula>IF(
ISNULL(BookingLineItem__r.Stop_On_Web_Date__c),1,
(BookingLineItem__r.Stop_On_Web_Date__c - BookingLineItem__r.Run_Date__c) +1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Line Item Total Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>