News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/DistributedRevenueExclGST__c.field-meta.xml
<CustomField>
    <fullName>DistributedRevenueExclGST__c</fullName>
    <formula>BookingLineItem__r.Gross_Price__c * DistributionPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributed Revenue Excl GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>