News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/DistributedRevenueIncGST__c.field-meta.xml
<CustomField>
    <fullName>DistributedRevenueIncGST__c</fullName>
    <formula>BookingLineItem__r.Gross_Price_GST_Incl__c * DistributionPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributed Revenue Inc GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>