News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/DistributionPercent__c.field-meta.xml
<CustomField>
    <fullName>DistributionPercent__c</fullName>
    <formula>DistributionTotalDays__c / BookingLineItemTotalDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>