News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/DistributionTotalDays__c.field-meta.xml
<CustomField>
    <fullName>DistributionTotalDays__c</fullName>
    <formula>(EndDate__c - StartDate__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Total Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>