News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/FiscalMonthId__c.field-meta.xml
<CustomField>
    <fullName>FiscalMonthId__c</fullName>
    <label>Fiscal Month Id</label>
    <length>6</length>
    <type>Text</type>
</CustomField>