News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/FiscalMonthName__c.field-meta.xml
<CustomField>
    <fullName>FiscalMonthName__c</fullName>
    <label>Fiscal Month Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>