News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/OpportunityOwnerCurrentRole__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerCurrentRole__c</fullName>
    <formula>BookingLineItem__r.Booking__r.Sales_Order_Owner__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Current Role</label>
    <type>Text</type>
</CustomField>