News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/OpportunityOwnerExternalId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerExternalId__c</fullName>
    <formula>BookingLineItem__r.Booking__r.Sales_Order__r.Owner:User.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner External Id</label>
    <type>Text</type>
</CustomField>