News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/ProductClassification__c.field-meta.xml
<CustomField>
    <fullName>ProductClassification__c</fullName>
    <formula>IF(
ISPICKVAL(BookingLineItem__r.Product__r.Family,&#39;Digital&#39;), &#39;Digital&#39;,
IF(OR(
ISPICKVAL(BookingLineItem__r.Product__r.Family,&#39;Magazine&#39;),
ISPICKVAL(BookingLineItem__r.Product__r.Family,&#39;Print Community&#39;),
ISPICKVAL(BookingLineItem__r.Product__r.Family,&#39;Print Metro&#39;)), &#39;Print&#39;, &#39;&#39;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Classification</label>
    <type>Text</type>
</CustomField>