News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/SalesOrderOwner__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderOwner__c</fullName>
    <formula>BookingLineItem__r.Booking__r.Sales_Order__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Owner</label>
    <type>Text</type>
</CustomField>