News UAT/force-app/main/default/objects/BookingLineItemRevenueDist__c/fields/SalesSummary__c.field-meta.xml
<CustomField>
    <fullName>SalesSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Summary</label>
    <referenceTo>SalesSummary__c</referenceTo>
    <relationshipLabel>Booking Line Item Revenue Dists</relationshipLabel>
    <relationshipName>Booking_Line_Item_Revenue_Dists</relationshipName>
    <type>Lookup</type>
</CustomField>